<resources>
    <string name="app_name">AR School Book</string>
    <string name="app_name_gen" translatable="false">Gen Book</string>
    <!--    Book Index (en)-->
    <string name="ch_title">Chapters</string>
    <string name="ch_no_1">Chapter 1</string>
    <string name="ch_no_2">Chapter 2</string>
    <string name="ch_no_3">Chapter 3</string>
    <string name="ch_no_4">Chapter 4</string>
    <string name="ch_no_5">Chapter 5</string>
    <string name="ch_no_6">Chapter 6</string>
    <string name="ch_no_7">Chapter 7</string>
    <string name="ch_no_8">Chapter 8</string>
    <string name="ch_no_9">Chapter 9</string>
    <string name="ch_no_10">Chapter 10</string>
    <string name="ch_no_11">Chapter 11</string>
    <string name="ch_no_12">Chapter 12</string>
    <string name="ch_no_13">Chapter 13</string>
    <string name="ch_no_14">Chapter 14</string>

    <string name="ch_name_1">Lower Organisms</string>
    <string name="ch_name_2">Cellular Organisation of Plants and Animals</string>
    <string name="ch_name_3">External Morphology of Plants</string>
    <string name="ch_name_4">Respiration</string>
    <string name="ch_name_5">Digestive System and Blood Circulation System</string>
    <string name="ch_name_6">Structure of Matter</string>
    <string name="ch_name_7">The of Energy</string>
    <string name="ch_name_8">About Sound</string>
    <string name="ch_name_9">Heat and Temperature</string>
    <string name="ch_name_10">Phenomena of Electricity and Magnet</string>
    <string name="ch_name_11">Change in Surrounding and Various Incidents</string>
    <string name="ch_name_12">The Solar System and Our Earth</string>
    <string name="ch_name_13">Environment and Pollution</string>
    <string name="ch_name_14">Change of Climate</string>

    <!--    Book Title (en)-->
    <string name="book_title">Science Book </string>
    <string name="book_caption">Class 7 </string>

    <!--    Button Texts -->
    <string name="lng_switch_en" translatable="false">En</string>
    <string name="lng_switch_bn" translatable="false">বাং</string>
    <string name="prev" translatable="false">Previous</string>
    <string name="next" translatable="false">Next</string>
    <string name="view_figures" translatable="false">View Figures</string>
    <string name="scan_figures" translatable="false">Scan Figures</string>
    <string name="search_box_hint" translatable="false">Search Keywords...</string>

    <!--    Figure Names -->
    <string name="fig_no_1.1">Virus Particle</string>
    <string name="fig_no_1.6">Microscopic structure of amoeba</string>
    <string name="fig_no_1.7">Entamoeba</string>
    <string name="fig_no_2.1a">Different parts of a plant cell</string>
    <string name="fig_no_2.1b">Different parts of an animal cell</string>
    <string name="fig_no_2.3">Different parts of nucleus</string>
    <string name="fig_no_2.6">A single neurone</string>
    <string name="fig_no_4.3">Human respiratory system</string>
    <string name="fig_no_5.1">Digestive System</string>
    <string name="fig_no_12.1">The solar system</string>
    <string name="not_available" translatable="false">Not Available</string>


    <string-array name="fig_ch_1">
        <item>@string/fig_no_1.1</item>
        <item>@string/fig_no_1.6</item>
        <item>@string/fig_no_1.7</item>

    </string-array>
    <string-array name="fig_ch_2">
        <item>@string/fig_no_2.1a</item>
        <item>@string/fig_no_2.1b</item>
        <item>@string/fig_no_2.3</item>
        <item>@string/fig_no_2.6</item>
    </string-array>
    <string-array name="fig_ch_3">
        <item>@string/not_available</item>
    </string-array>
    <string-array name="fig_ch_4">
        <item>@string/fig_no_4.3</item>
    </string-array>
    <string-array name="fig_ch_5">
        <item>@string/fig_no_5.1</item>
    </string-array>
    <string-array name="fig_ch_6">
        <item>@string/not_available</item>
    </string-array>
    <string-array name="fig_ch_7">
        <item>@string/not_available</item>
    </string-array>
    <string-array name="fig_ch_8">
        <item>@string/not_available</item>
    </string-array>
    <string-array name="fig_ch_9">
        <item>@string/not_available</item>
    </string-array>
    <string-array name="fig_ch_10">
        <item>@string/not_available</item>
    </string-array>
    <string-array name="fig_ch_11">
        <item>@string/not_available</item>
    </string-array>
    <string-array name="fig_ch_12">
        <item>@string/fig_no_12.1</item>
    </string-array>
    <string-array name="fig_ch_13">
        <item>@string/not_available</item>
    </string-array>
    <string-array name="fig_ch_14">
        <item>@string/not_available</item>
    </string-array>

    <!-- For Alert Dialogs -->
    <string name="ar_dialog_title">How to view AR?</string>
    <string name="ar_dialog_message">Point your camera to a flat surface. When you see white dots appearing tap on the those dots. if the white dots are not appearing try moving your phone as shown, or point to another flat surface.</string>
    <string name="ar_dialog_ok">OK</string>
    <string name="ar_dialog_show3d_instead">See 3D view instead</string>
    <string name="ar_image_dialog_title">How to scan figure image?</string>
    <string name="ar_image_dialog_message">Point your camera to a figure in your book and the AR model should appear. If AR model does not appear, move your phone around and zoom in to the figure image.</string>

    <!--    Extra resources for the new version -->
    <string name="gen_title" translatable="false">AR Science Book</string>
    <string name="gn_title_hint" translatable="false">Select Your Class</string>
    <string name="gn_classes" translatable="false">Classes</string>

    <string name="cl_6">Class 6</string>
    <string name="cl_7">Class 7</string>
    <string name="cl_8">Class 8</string>
    <string name="cl_9">Class 9</string>
    <string name="cl_10">Class 10</string>

    <string-array name="class_names">
        <item>@string/cl_6</item>
        <item>@string/cl_7</item>
        <item>@string/cl_8</item>
        <item>@string/cl_9</item>
        <item>@string/cl_10</item>
    </string-array>

    <string-array name="chapter_numbers">
        <item> @string/ch_no_1</item>
        <item> @string/ch_no_2</item>
        <item> @string/ch_no_3</item>
        <item> @string/ch_no_4</item>
        <item> @string/ch_no_5</item>
        <item> @string/ch_no_6</item>
        <item> @string/ch_no_7</item>
        <item> @string/ch_no_8</item>
        <item> @string/ch_no_9</item>
        <item> @string/ch_no_10</item>
        <item> @string/ch_no_11</item>
        <item> @string/ch_no_12</item>
        <item> @string/ch_no_13</item>
        <item> @string/ch_no_14</item>
    </string-array>

    <string-array name="chapter_names_c7">
        <item> @string/ch_name_1</item>
        <item> @string/ch_name_2</item>
        <item> @string/ch_name_3</item>
        <item> @string/ch_name_4</item>
        <item> @string/ch_name_5</item>
        <item> @string/ch_name_6</item>
        <item> @string/ch_name_7</item>
        <item> @string/ch_name_8</item>
        <item> @string/ch_name_9</item>
        <item> @string/ch_name_10</item>
        <item> @string/ch_name_11</item>
        <item> @string/ch_name_12</item>
        <item> @string/ch_name_13</item>
        <item> @string/ch_name_14</item>
    </string-array>

</resources>