<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/_13sdp"
    android:elevation="@dimen/_15sdp"
    android:background="@drawable/custom_layout_background">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_icon"
        android:background="@color/transparent"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_7sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_no_1"
            android:fontFamily="@font/seguisb"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/_21sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_name_1"
            android:fontFamily="@font/segoeui"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/_18sdp"
            android:ellipsize="none"
            android:maxLines="100"
            android:scrollHorizontally="false"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewFigBtn"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:padding="@dimen/_6sdp"
        android:fontFamily="@font/seguisb"
        android:textColor="@color/white"
        android:text="@string/view_figures"
        android:background="@drawable/custom_button"
        app:icon ="@drawable/ic_ar_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/_5sdp"
        app:backgroundTint="@null"
        android:theme="@style/Theme.MaterialComponents"
        app:iconTint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/prevBtn"
            android:fontFamily="@font/seguisb"
            android:textColor="@color/white"
            android:text="@string/prev"
            android:background="@drawable/custom_button"
            app:icon ="@drawable/ic_previous_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/_5sdp"
            app:backgroundTint="@null"
            android:theme="@style/Theme.MaterialComponents"
            app:iconTint="@color/white"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_3sdp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextBtn"
            android:layout_weight="1"
            android:fontFamily="@font/seguisb"
            android:textColor="@color/white"
            android:text="@string/next"
            android:background="@drawable/custom_button"
            app:icon ="@drawable/ic_next_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/_5sdp"
            app:backgroundTint="@null"
            android:theme="@style/Theme.MaterialComponents"
            app:iconTint="@color/white"
            android:layout_marginStart="@dimen/_3sdp" />
    </LinearLayout>
</LinearLayout>