<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="@dimen/_13sdp"
    android:elevation="@dimen/_15sdp"
    android:background="@drawable/custom_layout_background"
    tools:context=".activities.ContentActivity">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:background="@color/transparent"
        android:onClick="backClick"
        android:src="@drawable/ic_back_icon"
        android:paddingTop="@dimen/_8sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp">
        <TextView
            android:id="@+id/selected_ch_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_no_1"
            android:fontFamily="@font/seguisb"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/_21sdp"/>
        <TextView
            android:id="@+id/selected_ch_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_name_1"
            android:fontFamily="@font/seguisb"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/_18sdp"
            android:ellipsize="none"
            android:maxLines="100"
            android:scrollHorizontally="false"/>
    </LinearLayout>

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:autoPlay="false"
        app:showFullScreenButton="false"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/prevBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:enabled="false"
            android:fontFamily="@font/seguisb"
            android:onClick="previousButtonClick"
            android:text="@string/prev"
            android:textColor="@color/white"
            android:theme="@style/Theme.MaterialComponents"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_previous_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/_5sdp"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:enabled="false"
            android:fontFamily="@font/seguisb"
            android:onClick="nextButtonClick"
            android:text="@string/next"
            android:textColor="@color/white"
            android:theme="@style/Theme.MaterialComponents"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_next_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/_5sdp"
            app:iconTint="@color/white" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewFigBtn"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:padding="@dimen/_6sdp"
        android:fontFamily="@font/seguisb"
        android:textColor="@color/white"
        android:text="@string/view_figures"
        android:background="@drawable/custom_button"
        app:icon ="@drawable/ic_ar_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/_5sdp"
        app:backgroundTint="@null"
        android:theme="@style/Theme.MaterialComponents"
        app:iconTint="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/searchBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/search_box"
        android:drawableStart="@drawable/ic_search"
        android:inputType="textWebEditText|textNoSuggestions"
        android:fontFamily="@font/segoeui"
        android:hint="@string/search_box_hint"
        android:paddingStart="15dp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="10dp"
        android:paddingBottom="@dimen/_10sdp"
        android:textSize="20sp"
        android:imeOptions="actionSearch"
        />


</LinearLayout>